added MIT /LICENSE

--- a/v.js/v.css
+++ b/v.js/v.css
@@ -1,5 +1,7 @@
-/* Copyright (c) 2012 Md Gao */
-/* Improve my V2EX experience */
+/* Copyright (c) 2012 Md Gao
+ * MIT /LICENSE
+ * Improve my V2EX experience
+ */
 
 * { -webkit-text-size-adjust: auto !important; }
 
