--- a/v.js/v.css
+++ b/v.js/v.css
@@ -35,6 +35,7 @@ body {
 	background-image: none;
 	background: -webkit-linear-gradient(top, rgba(85,87,83,0.42) 0%,rgba(0,0,0,0) 90%);
 	background: -moz-linear-gradient(top, rgba(85,87,83,0.42) 0%,rgba(0,0,0,0) 90%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5557536B', endColorstr='#000000ff');
 }
 
 #TopMain {
