--- a/subv.css
+++ b/subv.css
@@ -25,6 +25,18 @@ body {
 	font-family: "Arial", "Microsoft YaHei" !important;
 }
 
+#o {
+	height: 100%;
+	background-color: #EEE;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	z-index: 8888;
+	display: block;
+	/*opacity: 0.5;*/
+}
+
 #Rightbar {
 	display: none;
 }
