--- a/subv.css
+++ b/subv.css
@@ -23,9 +23,10 @@ a, a:hover, a:link, a:active {
 /* font fix for Windows Vista+ */
 body {
 	font-family: "Arial", "Microsoft YaHei" !important;
+	display: none;
 }
 
-#o {
+#oo {
 	height: 100%;
 	background-color: #EEE;
 	position: fixed;
@@ -33,7 +34,7 @@ body {
 	left: 0px;
 	width: 100%;
 	z-index: 8888;
-	display: block;
+	display: none;
 	/*opacity: 0.5;*/
 }
 
