--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -1,6 +1,6 @@
 * {
 	font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", sans-serif;
-	-webkit-transition: .5s;
+	/*-webkit-transition: .5s;*/
 }
 
 #list-container {
@@ -23,6 +23,7 @@
 	/*border-bottom: 1px dotted black;*/
 	padding: .8em .6em;
 	position: relative;
+	margin-bottom: .8em;
 }
 
 .item .meta {
@@ -74,8 +75,29 @@
 	-webkit-transition: .2s;
 }
 
-.item:hover .item-checker,
+/*.item:hover .item-checker,*/
 .item-checker:hover {
 	opacity: 1;
+}
+
+#overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 99;
+	background-color: black;
+	opacity: .5;
+	display: none;
+}
+
+#topic {
+	height: 88%;
+	position: fixed;
+	top: 5%;
+	z-index: 100;
+	overflow-y: scroll;
+	display: none;
 }
 
