--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -1,7 +1,11 @@
 * {
-	font-family: "Helvetica Neue", Helvetica, Arial, "Droid Sans Fallback", "Microsoft YaHei", sans-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", "Droid Sans Fallback", sans-serif;
 	/*-webkit-transition: .5s;*/
 	box-sizing: border-box;
+}
+
+.search-query {
+	box-sizing: content-box;
 }
 
 body {
@@ -46,6 +50,10 @@ body {
 	display: none;
 }
 
+.item.active > .comments-container {
+	display: block;
+}
+
 .item.active,
 .item:last-child {
 	border: 1px solid #cccccc;
@@ -85,7 +93,7 @@ body {
 }
 
 .item-checker p {
-	font-size: 4em;
+	font-size: 3em;
 	margin-top: .1em;
 	cursor: pointer;
 }
@@ -126,14 +134,12 @@ body {
 	display: none;
 }
 
-/*
 .comments-container {
-	margin-left: 100px;
+	display: none;
 }
-*/
 
 .comment .content {
-	font-size: 1.5em;
+	font-size: 1em;
 	line-height: 1.55em;
 	overflow-x: auto;
 	word-wrap: break-word;
@@ -158,7 +164,7 @@ body {
 }
 
 .comment .author {
-	font-size: 1.4em;
+	font-size: 1em;
 	font-weight: 900;
 }
 
@@ -194,12 +200,51 @@ body {
 }
 
 .comment .no p.no-number {
-	font-size: 3em;
+	font-size: 2em;
 }
 
 .comment .no p.no-number:before {
 	font-size: 80%;
 	content: "#";
 	vertical-align: super;
+}
+
+.comment-container {
+	position: relative;
+}
+
+.item.active .control-bar {
+	display: block;
+}
+
+.control-bar {
+	display: none;
+	float: left;
+	position: absolute;
+	top: 200px;
+	background-color: #d3d7cf;
+	opacity: .2;
+	border-radius: 24px;
+	-webkit-transition: all .4s;
+	padding: .5em;
+}
+
+.control-bar:hover {
+	opacity: 1;
+	-webkit-transition: all .4s;
+}
+
+.control-bar p {
+	font-size: 48px;
+	text-align: center;
+	margin: 0;
+	-webkit-transition: all .4s;
+	cursor: pointer;
+}
+
+.control-bar p:hover {
+	background-color: yellow;
+	border-radius: 30px;
+	-webkit-transition: all .4s;
 }
 
