showing comments/views word instead of icon looks classy!!
updated font-family mainly for OS X, and

--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -1,5 +1,5 @@
 * {
-	font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", "Droid Sans Fallback", sans-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, STHeiti, "Microsoft YaHei", "Droid Sans Fallback", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", sans-serif;
 	/*-webkit-transition: .5s;*/
 	box-sizing: border-box;
 }
